Corrected alignment of play icon cover image

--- a/index.css
+++ b/index.css
@@ -169,31 +169,47 @@ background: #000;
 .cards {
     margin-bottom: 4%;
     background-color: rgb(17, 16, 16);
-    background-color: white;
+    /* background-color: white; */
 }
 
 .h-100 {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* text-align: center; */
+    /* background-color: aqua; */
+    /* width: 100%; */
     padding: 0;
 }
 
-.play-icon {
-    position: absolute;
-    /* right: 0;
-    bottom: 0;
-    margin-right: 11%;
-    margin-bottom: 38%; */
-    right: 0;
-    font-size: 22px;
-    background-color: transparent;
-    /* visibility: hidden; */
-    
+.h-100:hover :not(#masterPlayCover){
+    cursor: pointer;
+    opacity: 0.7;
 }
 
-.play-icon i {
-    background-color: transparent;
-    color: rgb(48, 180, 62);
+.h-100:hover i{
+    visibility: visible;
+    z-index: 6;
+}
+
+.h-100 i:hover {
+    color: rgb(67, 67, 170);
+    /* color: white; */
+    /* color: rgb(124, 170, 106); */
+}
+
+.h-100 i {
     /* width: 100%; */
+    position: absolute;
+    background-color: transparent;
+    text-align: center;
+    /* right: 0; */
+    cursor: pointer;
+    font-size: 45px;
+    /* color: rgb(103, 255, 43); */
+    color: rgb(255, 255, 255);
+    visibility: hidden;
 }
 
 .card-img-top {
@@ -202,10 +218,11 @@ background: #000;
 }
 
 .song-info {
-    height: 70px;
+    width: 100%;
 }
 
 .music-name {
+    /* width: 100%; */
     padding: 5%;
     font-weight: bolder;
     font-family: 'Marcellus', serif;
@@ -213,6 +230,7 @@ background: #000;
 }
 
 .duration {
+    /* width: 100%; */
     padding: 3%;
     font-size: 12px;
     font-weight: 520;
